tests/dependencies/cycle.sy
a :: b
b :: a

start :: fn do
    a
end

// error: Dependency cycle
// error: Dependency cycle
